add: auth module, login route
