# doc/api.yaml
@@ -131,13 +131,13 @@ security:
   - bearerAuth: []
 
 paths:
-  /login:
+  /auth/login:
     post:
       tags:
-        - Login
+        - Auth
       security: []
       summary: Login
-      description: Logins a user and returns a JWT-token
+      description: Logins a user and returns a JWT-tokens
       requestBody:
         required: true
         content:
@@ -149,9 +149,11 @@ paths:
                 login:
                   type: string
                   description: Username
+                  example: artesha
                 password:
                   type: string
                   description: Password
+                  example: qwerty
               required:
                 - user
                 - login
@@ -163,47 +165,13 @@ paths:
               schema:
                 type: object
                 properties:
-                  token:
+                  accessToken:
                     type: string
-                description: JWT Token
+                  refreshToken:
+                    type: string
+                description: JWT Tokens
         403:
           description: Incorrect login or password
-
-  /signup:
-    post:
-      tags:
-        - Signup
-      security: []
-      summary: Signup
-      description: Signup a user
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              title: example
-              properties:
-                login:
-                  type: string
-                  minLength: 3
-                  maxLength: 255
-                  description: Username
-                password:
-                  type: string
-                  format: password
-                  pattern: ^[a-zA-Z0-9]{3,30}
-                  description: Password
-              required:
-                - login
-                - password
-      responses:
-        204:
-          description: Successful signup
-        400:
-          description: Bad request
-        409:
-          description: Conflict. Login already exists
 
   /user:
     get:
